[package]
name = "quantii_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/catboardbeta/dioxus", features = ["web"] }
fermi = { git = "https://github.com/catboardbeta/dioxus" }